theia 0.2.0:
    first graphics
    ghost surfaces
    benches

-----------
theia 0.1.0:
    .tia input file
	.out output file
	lenses, mirrors
	non-sequential tracing
	easy installation thanks to setuptools