@@ -2,3 +2,4 @@
 29.05.17:   0.1.0 doc
 08.06.17:   0.1.0 alpha
 13.06.17:   0.1.0
+12.07.17:   0.1.1
