@@ -7,8 +7,8 @@ __author__ = "R. Duque"
 __copyright__ = "Copyright 2017, R. Duque"
 __credits__ = ["R. Duque"]
 __license__ = "GNU GPLv3+"
-__version__ = "0.2.0"
-__status__ = "dev"
+__version__ = "0.1.1"
+__status__ = "stable"
 __maintainer__ = "R. Duque"
 __email__ = "raphael.duque@polytechnique.edu"
 
