@@ -21,7 +21,7 @@ def mirrorShape(mirror):
     Returns a shape for a CAD file object.
 
     '''
-    return Part.makeCylinder(mirror.Dia/2., mirror.Thick,
+    return Part.makeCylinder((mirror.Dia/2.)/0.001, mirror.Thick/0.001,
                                 Base.Vector(0,0,0),
                                 Base.Vector(tuple(-mirror.HRNorm)))
 
@@ -33,7 +33,7 @@ def lensShape(lens):
     Returns a shape for a CAD file object.
 
     '''
-    return Part.makeCylinder(lens.Dia/2., max(lens.Thick, 0.001),
+    return Part.makeCylinder((lens.Dia/2.)/0.001, max(lens.Thick/0.001, 0.001),
                                 Base.Vector(0,0,0),
                                 Base.Vector(tuple(-lens.HRNorm)))
 
@@ -45,7 +45,7 @@ def beamDumpShape(beamDump):
     Returns a shape for a CAD file object.
 
     '''
-    return Part.makeCylinder(beamDump.Dia/2., beamDump.Thick,
+    return Part.makeCylinder((beamDump.Dia/2.)/0.001, beamDump.Thick/0.001,
                                 Base.Vector(0,0,0),
                                 Base.Vector(tuple(-beamDump.HRNorm)))
 
@@ -57,7 +57,7 @@ def ghostShape(ghost):
     Returns a shape for a CAD file object.
 
     '''
-    return Part.makeCylinder(ghost.Dia/2., 0.01,
+    return Part.makeCylinder((ghost.Dia/2.)/0.001, 0.01/0.001,
                                 Base.Vector(0,0,0),
                                 Base.Vector(tuple(-ghost.HRNorm)))
 
@@ -73,8 +73,8 @@ def beamShape(beam):
     line.StartPoint = Base.Vector(0,0,0)
     zero = np.array([0., 0., 0.])
     if beam.Length > 0.:
-        line.EndPoint = Base.Vector(tuple(zero + beam.Length * beam.Dir))
+        line.EndPoint = Base.Vector(tuple(zero + beam.Length/0.001 * beam.Dir))
     else:
-        line.EndPoint = Base.Vector(tuple(zero + 1.e7 * beam.Dir))
+        line.EndPoint = Base.Vector(tuple(zero + 1.e7/0.001 * beam.Dir))
 
     return line.toShape()
