@@ -1,6 +1,6 @@
 # This is a tutorial file which is particularly fit for learning because
 #it uses all the possible optics available in theia (thinlens, thicklens,
-#mirror, beamdump).
+#mirror, beamdump, ghost surface).
 
 # Here, first line without a comment, has the longname
 All of theia!
@@ -24,11 +24,15 @@ tk  86*cm, 	0,  0, 			    Phi = 182*deg, K1 = 1.e-3,   K2 = 1.e-3, Diameter = 12
 #start a bench here
 #bo deltaX, deltaY, deltaZ
 bo 101*cm, 0, 0
+
 # mirror (remember that in this case X,Y,Z are coordinates of the center of the chord of the HR)
 #mr	X	Y	Z	Theta	Phi				Wedge			Alpha	HRK			ARK			Diameter	Thickness	N	HRr	HRt	ARr	ARt	KeepI	Ref
 mr 						Phi = -135*deg, Wedge = 0*deg,			HRK = 0., 	ARK = 0,  	Diameter = 10*cm, Thickness = 3*cm, HRr = 0.998, HRt = 0.002, Alpha = 0*deg, N= 1.1, Ref = 'M1'
 
-
 #beamdump (X,Y,Z is the center of the principal face)
 #bd	X		Y			Z	Theta	Phi			Dia		Thickness		Ref
 bd 0*cm, 	-43.0*cm, 	0., 90*deg, 90*deg, 	7*cm, 	2*mm, 	 'BD'
+
+#ghost surface
+#gh X       Y           Z    Theta       Phi     Diameter,   Ref
+gh 0.1,     -43.0*cm,   0.,  90*deg,    90*deg,  5*cm,       'Ghost'
