@@ -10,7 +10,7 @@ from theia.helpers.units import *
 
 # initialize globals (necessary to use theia in library form)
 dic = {'info': False, 'warning': True, 'text': True, 'cad': True,
-		'fname': 'test_optics'}
+		'fname': 'vignale', 'fclib' : '/usr/local/lib/freecad/lib'}
 settings.init(dic)
 
 # Here is a spherical mirror
